@@ -696,6 +696,8 @@ prlimit64-success--pidns-translation
 process_madvise
 process_madvise-y
 process_madvise-yy
+process_mrelease
+process_mrelease-y
 process_vm_readv
 process_vm_readv--pidns-translation
 process_vm_writev
