@@ -1,0 +1,4 @@
+#define SKIP_IF_PROC_IS_UNAVAILABLE skip_if_unavailable("/proc/self/fd/")
+#define FD0_STR "</dev/full>"
+
+#include "process_mrelease.c"
